Theme/ElegantFin-theme-nightly.css
/* ... */
/* this disables block padding on pre-10.11.0 */
.layout-mobile .detailPagePrimaryContainer.detailRibbon,
/* this disables block padding on 10.11.0 */
.layout-mobile .detailPagePrimaryContainer>.detailRibbon {
    padding: 0 var(--sidePadding);
}

/* [dir=ltr] .detailPagePrimaryContent {
    padding-right: 0;
} */

.layout-desktop .detailPagePrimaryContainer {
    background: transparent;
}

.layout-desktop .detailPageSecondaryContainer {
    background-color: transparent;
}

/* this removes the extra large left padding on 10.11.0 */
.detailPagePrimaryContainer>.detailPagePrimaryContent,
[dir=ltr] .detailPagePrimaryContainer>.detailRibbon,
/* this removes the extra large left padding on pre-10.11.0 */
[dir=ltr] .detailPagePrimaryContainer.detailRibbon {
    padding-left: var(--sidePadding);
}

.layout-mobile .detailPagePrimaryContent {
    padding-left: var(--sidePadding) !important;
    padding-right: var(--sidePadding) !important;
}

/* this places main media buttons below the title on 10.11.0 */
.layout-desktop [dir="ltr"] .detailRibbon,
.layout-tv [dir="ltr"] .detailRibbon {
    flex-direction: column;
}

.detailPagePrimaryContainer > .detailPagePrimaryContent {
    padding-top: 0;
}

.detailPageSecondaryContainer {
    /* use !important for pre-10.11.0 compatibility */
    padding-top: 0 !important;
}

/* this hides the header home button everywhere except the main media page */
.skinHeader-withBackground:not(.semiTransparent) .headerHomeButton {
    display: none;
}

/* workaround to show the header home button on the main media page on phones*/
.layout-mobile:has(#itemDetailPage:not(.hide)) .headerHomeButton {
    display: block;
}

.pageTitle {
    height: 1.5em;
}

.headerLeft .pageTitle {
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.paper-icon-button-light > .material-icons {
    font-size: 1.25em;
}

#itemDetailPage .emby-scroller-container,
#itemDetailPage .emby-scroller,
#itemDetailPage .scrollX {
    margin: 0 calc(-1 * var(--sidePadding));
    padding-left: calc(var(--sidePadding));
    /* mask-image: linear-gradient(90deg, transparent, white var(--sidePadding), white calc(100vw - var(--sidePadding)), transparent); */
}

.layout-desktop .emby-scroller-container,
.layout-desktop .emby-scroller,
.layout-desktop .scrollX {
    --itemColumnGap: 0.5em;
}

.emby-scroller,
.scrollX {
    padding-left: calc(var(--sidePadding));
}

.sectionTabs .scrollX {
    padding-left: 0;
}

.itemsContainer:not(.editorsChoiceItemsContainer) {
    column-gap: var(--itemColumnGap);
    row-gap: 1em;
}

/* this is a workaround to add a gap between the last child and the edge of the screen on phones */
.layout-mobile .itemsContainer:not(.editorsChoiceItemsContainer, .vertical-wrap, .vertical-list)::after {
    content: "13";
    color: transparent;
}

.layout-desktop .sectionTitle,
.layout-tv .sectionTitle {
    font-size: 1.5rem !important;
}

.emby-scrollbuttons,
[dir="ltr"] .emby-scrollbuttons {
    padding-top: 0;
}

.emby-scrollbuttons-button.paper-icon-button-light > .material-icons {
    font-size: 1.5em;
    place-content: center;
}

.detailRibbon {
    background-color: transparent;
}

.mediaInfoItem {
    border-radius: var(--smallRadius);
    font-weight: 500;
    padding-top: 0;
    padding-bottom: 0;
}

.itemMiscInfo-primary {
    column-gap: 0.5em;
}

.mediaInfoOfficialRating {
    background: transparent !important;
    font-size: 0.75em;
    font-family: "Noto Sans", sans-serif;
    line-height: 1.5em;
    transform: translateY(-0.15em);
    font-weight: 600;
    border: var(--defaultBorder);
    color: var(--textColor);
}

.starIcon {
    background: linear-gradient(to right, #90cea1, #01b4e4);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-left: -0.125em;
    transform: translateY(-0.02em);
}

[dir="ltr"] .mediaInfoCriticRating {
    background-size: 30%;
    padding-left: 1.5em;
}

[dir="ltr"] .mediaInfoCriticRating::after {
    content: "%";
}

.detailRibbon:has(.portraitCard .folder) {
    min-height: 32vh;
    align-content: flex-end;
}

.layout-desktop .detailRibbon:has(.person) {
    min-height: 15vh;
    align-content: flex-end;
}

.layout-desktop .detailRibbon {
    height: 100%;
    min-height: 25vh;
    margin-top: unset;
}

@keyframes animMoveDown {
    from {
        transform: translateY(-2em);
        opacity: 0;
    }

    to {
        transform: translateY(0);
        opacity: 1;
    }
}

@keyframes animMoveDownSecondaryPage {
    from {
        transform: translateY(-2em);
        opacity: 0;
    }

    to {
        transform: translateY(0);
        opacity: 0.3;
    }
}

@keyframes animMoveUp {
    from {
        transform: translateY(-90%);
        opacity: 0;
    }

    to {
        transform: translateY(-100%);
        opacity: 1;
    }
}

/* Theme video styling rolled back because jellyfin does not differentiate between the main video player and theme video playback nicely*/
/* .videoPlayerContainer {
    position: relative !important;
    -webkit-mask: var(--themeVideoPlayerMask);
    mask: var(--themeVideoPlayerMask);
    height: 90vh;
}

.layout-mobile .videoPlayerContainer {
    z-index: 1;
    height: 35vh;
}

.videoPlayerContainer>.htmlvideoplayer {
    width: -webkit-fill-available;
    object-fit: cover;
} */

.itemBackdrop {
    display: block !important;
}

.layout-desktop .itemBackdrop {
    height: calc(100vh - 27vh - var(--primaryItemPageNegativeSpace));
}

.layout-mobile .itemBackdrop {
    margin-top: 0;
    position: sticky;
    top: -30%;
    -webkit-mask: var(--itemBackdropMask);
    mask: var(--itemBackdropMask);
    animation: animMoveDown 0.5s ease-out forwards;
    height: 45vh;
}

.layout-tv .itemBackdrop {
    height: 33vh;
}
/* ... */

